// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository pinDependenciesFirst returns pin first 1`] = `
Array [
  Object {
    "branchName": "d",
    "type": "pin",
  },
  Object {
    "branchName": "a",
  },
  Object {
    "branchName": "b",
  },
  Object {
    "branchName": "c",
  },
]
`;

exports[`workers/repository pinDependenciesFirst returns pin first 2`] = `
Array [
  Object {
    "branchName": "d",
    "type": "pin",
  },
  Object {
    "branchName": "a",
  },
  Object {
    "branchName": "b",
  },
  Object {
    "branchName": "c",
  },
]
`;

exports[`workers/repository pinDependenciesFirst returns sorted if no pin 1`] = `
Array [
  Object {
    "branchName": "a",
  },
  Object {
    "branchName": "b",
  },
  Object {
    "branchName": "c",
  },
]
`;
